RESOLVED FIXED11635
Fix potential issue with non-xslt build
https://bugs.webkit.org/show_bug.cgi?id=11635
Summary Fix potential issue with non-xslt build
Sam Weinig
Reported 2006-11-17 12:02:01 PST
On line 203 of WebCore/dom/ProcessingInstruction.cpp (http://trac.webkit.org/projects/webkit/browser/trunk/WebCore/dom/ProcessingInstruction.cpp#L203) the "ASSERT(!m_isXSL);" should be wrapped in an #if XSLT_SUPPORT block.
Attachments
First attempt (3.24 KB, patch)
2006-11-17 12:16 PST, Rob Buis
mitz: review+
Rob Buis
Comment 1 2006-11-17 12:16:04 PST
Created attachment 11554 [details] First attempt As the ChangeLog entry says, fixes the issues and does some style fixing. Cheers, Rob.
mitz
Comment 2 2006-11-17 12:20:51 PST
Comment on attachment 11554 [details] First attempt r=me
Rob Buis
Comment 3 2006-11-17 12:49:46 PST
Landed in r17829.
Note You need to log in before you can comment on or make changes to this bug.