        Reviewed by Mitz.

http://bugs.webkit.org/show_bug.cgi?id=11635
        Bug 11635: Fix potential issue with non-xslt build

        Fix the issue and do style guideline corrections.



Canonical link: https://commits.webkit.org/14994@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17829 268f45cc-cd09-0410-ab3c-d52691b4dbfc